--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="google" value="notranslate">
   <title>Drembo Blockly:</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico" />
   <script src="appengine/storage.js"></script>
   <script src="blockly_compressed.js"></script>
   <script src="blocks_compressed.js"></script>
