adding the code for creating a sign

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <table width="100%" height="100%">
     <tr class="toprows">
       <td>
-        <h1><a href="https://developers.google.com/blockly/">Drembo Blockly</a>
+        <h1><a href="http://speedup.space/">Speedup</a>
+          &rlm; &gt;
+          Drembo Blockly
           &rlm; &gt;
           <span id="title">...</span>
         </h1>
@@ -148,6 +150,16 @@
         <value name="width"><shadow type="math_number"><field name="NUM">0</field></shadow></value>
 				<value name="height"><shadow type="math_number"><field name="NUM">0</field></shadow></value>
 				<value name="length"><shadow type="math_number"><field name="NUM">0</field></shadow></value>
+      </block>
+      <block type="minecraft_setsign">
+        <value name="x"><shadow type="math_number"><field name="NUM">0</field></shadow></value>
+				<value name="y"><shadow type="math_number"><field name="NUM">0</field></shadow></value>
+				<value name="z"><shadow type="math_number"><field name="NUM">0</field></shadow></value
+        <field name="facing">0</field>
+        <value name="line1"><shadow type="text"><field name="TEXT">text Line1</field></shadow></value>
+        <value name="line2"><shadow type="text"><field name="TEXT">text Line2</field></shadow></value>
+        <value name="line3"><shadow type="text"><field name="TEXT">text Line3</field></shadow></value>
+        <value name="line4"><shadow type="text"><field name="TEXT">text Line4</field></shadow></value>
       </block>
       <block type="minecraft_getpos"></block>
       <block type="minecraft_getpos_xyz">
